Fixed sideBarInnerWrapper div causing flickering with native scrollbar on resize.

--- a/app/styles/navigator.less
+++ b/app/styles/navigator.less
@@ -591,6 +591,7 @@ zoom: 1;*/
     }
 
     #sideBarInnerWrapper{
+        box-sizing: border-box;
         width: @sideBarExpandedWidth;
     }
 
